--- a/pom.xml
+++ b/pom.xml
@@ -224,7 +224,7 @@
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
-      <version>5.8.0.Final</version>
+      <version>5.8.2.Final-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
